--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,8 +1,11 @@
 ---
 sidebar_position: 1
+title: Introduction
 ---
 
-# Introduction
+import Highlight from "@site/src/components/Ads";
+
+<Ads />
 
 **Maxime** is a complete modern website template for digital agencies, design studios, digital marketing agencies, web design and development agencies, startup businesses, software provider companies, etc. This template is perfect for anyone who wants to start an information technology-related company.
 
