--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -3,7 +3,7 @@ sidebar_position: 1
 title: Introduction
 ---
 
-import Highlight from "@site/src/components/Ads";
+import { Ads } from "@site/src/components/Ads";
 
 <Ads />
 
