--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -13,6 +13,6 @@ The template is built with React, HTML5, and TailwindCSS to bring the modern loo
 
 The layout looks beautiful on any screen size, including mobile, tablet and laptop.
 
-You can preview the [demo](https://digital-agency-website-template.demo.tekminewe.com/) here.
+You can preview the [demo](https://digital-agency-website-template-demo.tekminewe.com/) here.
 
 If you are interested in the template, you can get one [here](https://www.tekminewe.com/product/digital-agency-website-template/).
